--- a/css/style.css
+++ b/css/style.css
@@ -47,10 +47,13 @@ body {
     border-bottom: 1px solid #e5e5e5;
   }
   .jumbotron .btn {
-    padding: 14px 24px;
+    padding: 10px 20px;
     font-size: 21px;
+    margin: 20px;
   }
-  
+  .margin--top{
+    margin-top: 20px;
+  }
   /* Supporting marketing content */
   .marketing {
     margin: 40px 0;
